with selection in list of decks

--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -67,8 +67,7 @@
 			<li><a href="#" id="btn-sort-update">By date of last update</a></li>
 			<li><a href="#" id="btn-sort-creation">By date of creation</a></li>
 			<li><a href="#" id="btn-sort-faction">By faction</a></li>
-			<li><a href="#" id="btn-sort-identity">By identity</a></li>
-			<li><a href="#" id="btn-sort-lastpack">By last datapack</a></li>
+			<li><a href="#" id="btn-sort-lastpack">By last pack</a></li>
 			<li><a href="#" id="btn-sort-name">By deck name</a></li>
 		</ul>
 	</div>
