--- a/src/AppBundle/Resources/views/Modale/tag_remove.html.twig
+++ b/src/AppBundle/Resources/views/Modale/tag_remove.html.twig
@@ -16,7 +16,7 @@
 						</div>
 						<div class="pull-right">
 							<input type="hidden" name="ids" id="tag_remove_ids">
-							<button type="submit" class="btn btn-success" onclick="$('#tagRemoveModal').modal('hide');tag_remove_process(event)">Remove</button>
+							<button type="submit" class="btn btn-success" onclick="$('#tagRemoveModal').modal('hide');app.ui.tag_remove_process(event)">Remove</button>
 							<button type="button" class="btn btn-default" onclick="$('#tagRemoveModal').modal('hide')">Cancel</button>
 						</div>
 						</form>
