--- a/src/AppBundle/Resources/views/Modale/tag_add.html.twig
+++ b/src/AppBundle/Resources/views/Modale/tag_add.html.twig
@@ -16,7 +16,7 @@
 						</div>
 						<div class="pull-right">
 							<input type="hidden" name="ids" id="tag_add_ids">
-							<button type="submit" class="btn btn-success" onclick="$('#tagAddModal').modal('hide');tag_add_process(event)">Add</button>
+							<button type="submit" class="btn btn-success" onclick="$('#tagAddModal').modal('hide');app.ui.tag_add_process(event)">Add</button>
 							<button type="button" class="btn btn-default" onclick="$('#tagAddModal').modal('hide')">Cancel</button>
 						</div>
 						</form>
