--- a/src/AppBundle/Resources/views/Modale/tag_clear.html.twig
+++ b/src/AppBundle/Resources/views/Modale/tag_clear.html.twig
@@ -15,7 +15,7 @@
 						</div>
 						<div class="pull-right">
 							<input type="hidden" name="ids" id="tag_clear_ids">
-							<button type="submit" class="btn btn-success" onclick="$('#tagClearModal').modal('hide');tag_clear_process(event)">Yes, clear</button>
+							<button type="submit" class="btn btn-success" onclick="$('#tagClearModal').modal('hide');app.ui.tag_clear_process(event)">Yes, clear</button>
 							<button type="button" class="btn btn-default" onclick="$('#tagClearModal').modal('hide')">Cancel</button>
 						</div>
 						</form>
