--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -43,6 +43,7 @@
 	<input type="hidden" id="deck-cancel-edits" name="cancel_edits" value="0">
 	<input type="hidden" name="content">
 	<input type="hidden" name="description">
+	<input type="hidden" name="faction_code" value="{{ deck.faction_code }}">
 	<input type="hidden" name="tags">
 		<div class="form-group">
 			<label for="name">Name</label>
